fix: layout issues

--- a/components/product/ProductView/ProductView.module.scss
+++ b/components/product/ProductView/ProductView.module.scss
@@ -3,8 +3,12 @@
 .root {
   display: flex;
   padding-top: 20px;
-  padding-bottom: 190px;
+  padding-bottom: 20px;
   flex-direction: column;
+
+  @include md-width {
+    padding-bottom: 50px;
+  }
 
   button {
     &:focus {
@@ -64,18 +68,18 @@
     .leftSide {
       height: 100%;
       margin: auto;
-      margin-top: 0;
-      margin-bottom: 100px;
-      margin-right: 85px;
+      margin-bottom: 5rem;
     
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
     
-      @media (max-width: 1000px) {
+      @include lg-width {
         margin: auto;
-        margin-bottom: 5rem;
+        margin-top: 0;
+        margin-bottom: 100px;
+        margin-right: 85px;
       }
 
       .productDisplay {
@@ -262,7 +266,7 @@
       }
 
       .childrenDescription {
-        margin-top: 9rem;
+        margin-top: 4rem;
         font-family: Gilroy;
         font-style: normal;
         font-weight: 800;
@@ -275,6 +279,10 @@
         a {
           color: white;
           text-decoration: underline;
+        }
+
+        @include lg-width {
+          margin-top: 9rem;
         }
       }
 
@@ -299,23 +307,32 @@
 
     .sidebar {
       @apply flex flex-col col-span-1 mx-auto max-w-8xl p-6 w-full h-full;
-      min-width: 650px;
-      width: fit-content;
-      margin-top: -60px;
-      
-      @media (max-width: 768px) {
-        min-width: unset;
-        max-width: 100vw;
+      min-width: unset;
+      max-width: 100vw;
+      margin-top: 0px;
+
+      @include lg-width {
+        min-width: 500px;
+        margin-top: -60px;  
       }
-    
+
+      @media (min-width: 1300px) {
+        min-width: 650px;
+        width: fit-content;
+      }
+      
       section {
-        width: 602px;
         display: flex;
         flex-direction: column;
-    
-        @media (max-width: 768px) {
-          // width: unset;
-          width: calc(90vw - 40px) !important;
+        
+        width: calc(90vw - 40px);
+
+        @include lg-width {
+          width: 450px;
+        }
+
+        @media (min-width: 1300px) {
+          width: 602px;
         }
 
         .amount {
@@ -326,6 +343,11 @@
           margin-bottom: 1rem;
           display: flex;
           text-shadow: 0px 4px 10px #FFFFFF;
+          white-space: nowrap;
+
+          @media (max-width: 768px) {
+            font-size: 30px;
+          }
 
           .helper {
             cursor: pointer;
@@ -363,6 +385,12 @@
               font-size: 14px;
               margin-left: 10px;
               text-align: center;
+              white-space: normal;
+
+              @media (max-width: 1300px) {
+                width: 200px;
+                margin-left: -200px;
+              }
 
               a {
                 text-decoration: underline;
@@ -454,7 +482,11 @@
           &:hover {
             transform: scale(1.05);
             transition: 0.3s all;
-          }          
+          }
+
+          @media (max-width: 540px) {
+            font-size: 16px;
+          }
         }
 
         a {
@@ -480,7 +512,11 @@
           &:hover {
             transform: scale(1.05);
             transition: 0.3s all;
-          }             
+          }
+
+          @media (max-width: 540px) {
+            font-size: 16px;
+          }
         }
       }
     
